# conductive_fluid_research

./: .gitignore  app.py  fft_analysis.py  math_functions.py  number_Nu.py  phase_time_plot.py  pp.py  readme.md  science_plots.py  setup.py  solution.py  system.py
Analysis/: fft_analysis.py  math_functions.py  phase_portrait.py  plot_Nusselt.py
app/interface/: frame.py  util.py  window.py
app/research/: number_Nu.py  puancare.py  solution.py  system.py
app/research/analysis/: fft_analysis.py  map_puancare.py  nusselt_extremum.py  nusselt_transition_plot.py  phase_portrait.py  plot.py  plot_2d_nusselt.py  plot_3d_nusselt.py
build_map_dinamic_modes/: lypunov.py  map_dinamic_modes.py  solve_puancare.py
configs/: Nusselt_config.json  example_config.json
methods/: odes.py
odeslib/: CMakeLists.txt
odeslib/include/: eq_sys.h
odeslib/src/: odes_lib.cpp
research/: combine_datasets.py  number_Nu.py  solution.py
research/analysis/: 2d_plot_nusselt.py  3d_plot_nusselt.py  fft_analysis.py  nusselt_transition_plot.py  phase_portrait.py  plot.py  plot_Nusselt.py  plot_nusselt.py
research/configs/: Nusselt_config.json  example_config.json
util/: combine_datasets.py
